syntax = "proto3";
package openim.sdk.msg;
option go_package = "github.com/openimsdk/openim-sdk-core/v3/proto";
option csharp_namespace = "OpenIM";

//import "google/protobuf/any.proto";
import "common.proto";
import "message.proto";

message MessageReceipt {
  string groupID = 1;
  string userID = 2;
  repeated string msgIDList = 3;
  int64 readTime = 4;
  int32 msgFrom = 5;
  int32 contentType = 6;
  int32 sessionType = 7;
}

message MessageRevoked {
  string revokerID = 1;
  int32 revokerRole = 2;
  string clientMsgID = 3;
  string revokerNickname = 4;
  int64 revokeTime = 5;
  int64 sourceMessageSendTime = 6;
  string sourceMessageSendID = 7;
  string sourceMessageSenderNickname = 8;
  int32 sessionType = 9;
  int64 seq = 10;
  string ex = 11;
  bool isAdminRevoke = 12;
}

message MessageReaction {
  string clientMsgID = 1;
  int32 reactionType = 2;
  int32 counter = 3;
  string userID = 4;
  string groupID = 5;
  int32 sessionType = 6;
  string info = 7;
}


message ReactionElem {
  int32 counter = 1;
  int32 type = 2;
  repeated UserReactionElem userReactionList = 3;
  bool canRepeat = 4;
  string info = 5;
}

message UserReactionElem {
  string userID = 1;
  int32 counter = 2;
  string info = 3;
}

message GroupHasReadInfo {
  repeated string hasReadUserIDList = 1;
  int32 hasReadCount = 2;
  int32 groupMemberCount = 3;
}


message GetAdvancedHistoryMessageListParams {
  string conversationID = 1;
  string startClientMsgID = 2;
  int32 count = 3;
}

message GetAdvancedHistoryMessageListCallback {
  repeated openim.sdk.message.IMMessage messageList = 1;
  bool isEnd = 2;
  int32 errCode = 3;
  string errMsg = 4;
}

// ------------------------------------------------------------------------------------------------------
message SendMessageReq {
  openim.sdk.message.IMMessage message = 1;
  string recvID = 2;
  string groupID = 3;
  common.OfflinePushInfo offlinePushInfo = 4;
  bool isOnlineOnly = 5;
}
message SendMessageResp {
  openim.sdk.message.IMMessage message = 1;
}


message GetAdvancedHistoryMessageListReq {
  string conversationID = 1;
  GetAdvancedHistoryMessageListParams getAdvancedHistoryMessageListParams = 2;
}
message GetAdvancedHistoryMessageListResp {
  GetAdvancedHistoryMessageListCallback getAdvancedHistoryMessageListCallback = 1;
}

message GetAdvancedHistoryMessageListReverseReq {
  string conversationID = 1;
  GetAdvancedHistoryMessageListParams getAdvancedHistoryMessageListParams = 2;
}
message GetAdvancedHistoryMessageListReverseResp {
  GetAdvancedHistoryMessageListCallback getAdvancedHistoryMessageListCallback = 1;
}

message RevokeMessageReq {
  string conversationID = 1;
  string clientMsgID = 2;
}
message RevokeMessageResp {}

message TypingStatusUpdateReq {
  string recvID = 1;
  string msgTip = 2;
}
message TypingStatusUpdateResp {}

message DeleteMessageReq {
  string conversationID = 1;
  string clientMsgID = 2;
}
message DeleteMessageResp {}

message DeleteAllMsgFromLocalAndServerReq {}
message DeleteAllMsgFromLocalAndServerResp {}

message DeleteAllMessageFromLocalStorageReq {}
message DeleteAllMessageFromLocalStorageResp {}

message InsertSingleMessageToLocalStorageReq {
  openim.sdk.message.IMMessage msg = 1;
  string recvID = 2;
  string sendID = 3;
}
message InsertSingleMessageToLocalStorageResp {
  openim.sdk.message.IMMessage msg = 1;
}

message InsertGroupMessageToLocalStorageReq {
  openim.sdk.message.IMMessage msg = 1;
  string groupID = 2;
  string sendID = 3;
}
message InsertGroupMessageToLocalStorageResp {
  openim.sdk.message.IMMessage msg = 1;
}

message CreateTextMessageReq {
  string text = 1;
}
message CreateTextMessageResp {
  openim.sdk.message.IMMessage message = 1;
}

message CreateAdvancedTextMessageReq {
  string text = 1;
  repeated openim.sdk.message.MessageEntity messageEntities = 2;
}
message CreateAdvancedTextMessageResp {
  openim.sdk.message.IMMessage message = 1;
}

message CreateTextAtMessageReq {
  string text = 1;
  repeated string userIDList = 2;
  repeated openim.sdk.message.AtInfo usersInfo = 3;
  openim.sdk.message.IMMessage quoteMessage = 4;
}
message CreateTextAtMessageResp {
  openim.sdk.message.IMMessage message = 1;
}

message CreateLocationMessageReq {
  string description = 1;
  double longitude = 2;
  double latitude = 3;
}
message CreateLocationMessageResp {
  openim.sdk.message.IMMessage message = 1;
}

message CreateCustomMessageReq {
  string data = 1;
  string extension = 2;
  string description = 3;
}
message CreateCustomMessageResp {
  openim.sdk.message.IMMessage message = 1;
}

message CreateQuoteMessageReq {
  string text = 1;
  openim.sdk.message.IMMessage quoteMessage = 2;
}
message CreateQuoteMessageResp {
  openim.sdk.message.IMMessage message = 1;
}

message CreateAdvancedQuoteMessageReq {
  string text = 1;
  openim.sdk.message.IMMessage quoteMessage = 2;
  repeated openim.sdk.message.MessageEntity messageEntities = 3;
}
message CreateAdvancedQuoteMessageResp {
  openim.sdk.message.IMMessage message = 1;
}

message CreateCardMessageReq {
  openim.sdk.message.CardElem card = 1;
}
message CreateCardMessageResp {
  openim.sdk.message.IMMessage message = 1;
}

message CreateImageMessageReq {
  string imageSourcePath = 1;
  openim.sdk.message.PictureBaseInfo sourcePicture = 2;
  openim.sdk.message.PictureBaseInfo bigPicture = 3;
  openim.sdk.message.PictureBaseInfo snapshotPicture = 4;
}
message CreateImageMessageResp {
  openim.sdk.message.IMMessage message = 1;
}

message CreateSoundMessageReq {
  string soundPath = 1;
  int64 duration = 2;
  openim.sdk.message.SoundBaseInfo soundElem = 3;
}
message CreateSoundMessageResp {
  openim.sdk.message.IMMessage message = 1;
}

message CreateVideoMessageReq {
  string videoSourcePath = 1;
  string videoType = 2;
  int64 duration = 3;
  string snapshotSourcePath = 4;
  openim.sdk.message.VideoBaseInfo videoElem = 5;
}
message CreateVideoMessageResp {
  openim.sdk.message.IMMessage message = 1;
}

message CreateFileMessageReq {
  string fileSourcePath = 1;
  string fileName = 2;
  openim.sdk.message.FileBaseInfo fileElem = 3;
}
message CreateFileMessageResp {
  openim.sdk.message.IMMessage message = 1;
}

message CreateMergerMessageReq {
  repeated openim.sdk.message.IMMessage messages = 1;
  string title = 2;
  repeated string summaries = 3;
}
message CreateMergerMessageResp {
  openim.sdk.message.IMMessage message = 1;
}

message CreateFaceMessageReq {
  int32 index = 1;
  string data = 2;
}
message CreateFaceMessageResp {
  openim.sdk.message.IMMessage message = 1;
}

message CreateForwardMessageReq {
  openim.sdk.message.IMMessage message = 1;
}
message CreateForwardMessageResp {
  openim.sdk.message.IMMessage message = 1;
}

message UploadLogsReq {
  int32 line = 1;
  string ex = 2;
}
message UploadLogsResp {}

message LogReq {
  int32 logLevel = 1;
  string file = 2;
  int32 line = 3;
  string msg = 4;
  string err = 5;
//  repeated google.protobuf.Any keysAndValues = 6;
}
message LogResp {}

